@@ -4,6 +4,8 @@ CHANGES.txt - 2011-06-14
 CHANGES IN CUPS V1.5rc1
 
 	- Compile fixes (STR #3849, STR #3850)
+	- The scheduler didn't check for empty values for several configuration
+	  directives (STR #3861)
 	- ipptool didn't generate valid XML when a test was skipped.
 	- Added additional error checking to the 1284 device ID code (STR #3858)
 	- Fixed some compatibility issues migrating from the old usblp backend
